--- a/Popup.html
+++ b/Popup.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="An extension for google chrome with which you can get the hex code of the color of any pixel on your screen. even outside the browser" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="Alan G. Alonso" />
+    <title>Min color-picker</title>
     <link rel="stylesheet" href="./popup.css" type="text/css" media="all" />
   </head>
 
@@ -13,8 +16,8 @@
       <header>
         <div>
           <!--<img-->
-            <!--src="./assets/icons/color-picker-outline.svg"-->
-            <!--alt="logo"-->
+          <!--src="./assets/icons/color-picker-outline.svg"-->
+          <!--alt="logo"-->
           <!--/>-->
           <h4>Min color-picker</h4>
         </div>
@@ -22,10 +25,8 @@
       <hr />
 
       <div class="no-color cant-container">
-        <img
-          class="cant-icon"
-          src="./assets/icons/pantone.svg"
-        /><img /><span style="font-family: lobster, sans-serif"
+        <img class="cant-icon" src="./assets/icons/pantone.svg" /><img /><span
+          style="font-family: lobster, sans-serif"
           >Use the color picker tool to select a pixel on the page. Or select a
           color from the lists below.</span
         >
