--- a/Popup.html
+++ b/Popup.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="An extension for google chrome with which you can get the hex code of the color of any pixel on your screen. even outside the browser" />
+    <meta
+      name="description"
+      content="An extension for google chrome with which you can get the hex code of the color of any pixel on your screen. even outside the browser"
+    />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Alan G. Alonso" />
     <title>Min color-picker</title>
@@ -14,13 +17,13 @@
   <body>
     <div id="mainCont">
       <header>
-        <div>
-          <!--<img-->
-          <!--src="./assets/icons/color-picker-outline.svg"-->
-          <!--alt="logo"-->
-          <!--/>-->
-          <h4>Min color-picker</h4>
-        </div>
+      <div>
+      <!--<img-->
+      <!--src="./assets/icons/color-picker-outline.svg"-->
+      <!--alt="logo"-->
+      <!--/>-->
+      <h4>Min color-picker</h4>
+      </div>
       </header>
       <hr />
 
@@ -29,6 +32,13 @@
           style="font-family: lobster, sans-serif"
           >Use the color picker tool to select a pixel on the page. Or select a
           color from the lists below.</span
+        >
+      </div>
+
+      <div class="cant-container no-priv">
+        <img class="cant-icon" src="./assets/icons/no-way.svg" /><img /><span
+          style="font-family: lobster, sans-serif"
+          >Min color-picker doesn’t work on privileged pages</span
         >
       </div>
 
