--- a/Popup.html
+++ b/Popup.html
@@ -17,13 +17,13 @@
   <body>
     <div id="mainCont">
       <header>
-      <div>
-      <!--<img-->
-      <!--src="./assets/icons/color-picker-outline.svg"-->
-      <!--alt="logo"-->
-      <!--/>-->
-      <h4>Min color-picker</h4>
-      </div>
+        <div>
+          <!--<img-->
+          <!--src="./assets/icons/color-picker-outline.svg"-->
+          <!--alt="logo"-->
+          <!--/>-->
+          <h4>Min color-picker</h4>
+        </div>
       </header>
       <hr />
 
@@ -42,7 +42,9 @@
         >
       </div>
 
-      <ul id="result"></ul>
+      <ul id="result">
+        <li id="add-button">+</li>
+      </ul>
       <div id="picker_btn_cont"></div>
       <div class="info-container">
         <p>Hex code is copied to clipboard!</p>
