--- a/Popup.html
+++ b/Popup.html
@@ -28,22 +28,22 @@
       <hr />
 
       <div class="no-color cant-container">
-        <img class="cant-icon" src="./assets/icons/pantone.svg" /><img /><span
-          style="font-family: lobster, sans-serif"
-          >Use the color picker tool to select a pixel on the page. Or select a
-          color from the lists below.</span
-        >
+        <!--[><img class="cant-icon" src="./assets/icons/pantone.svg" /><img /><span<]-->
+          <!--[>style="font-family: lobster, sans-serif"<]-->
+          <!--[>>Use the color picker tool to select a pixel on the page. Or select a<]-->
+          <!--[>color from the lists below.</span<]-->
+        <!--[>><]-->
       </div>
 
       <div class="cant-container no-priv">
-        <img class="cant-icon" src="./assets/icons/no-way.svg" /><img /><span
-          style="font-family: lobster, sans-serif"
-          >Min color-picker doesn’t work on privileged pages</span
-        >
+        <!--[><img class="cant-icon" src="./assets/icons/no-way.svg" /><img /><span<]-->
+          <!--[>style="font-family: lobster, sans-serif"<]-->
+          <!--[>>Min color-picker doesn’t work on privileged pages</span<]-->
+        <!--[>><]-->
       </div>
 
       <ul id="result">
-        <li id="add-button">+</li>
+        <!--<li id="add-button">+</li>-->
       </ul>
       <div id="picker_btn_cont"></div>
       <div class="info-container">
