fixed loading bugs

--- a/Popup.html
+++ b/Popup.html
@@ -22,10 +22,9 @@
           <!--src="./assets/icons/color-picker-outline.svg"-->
           <!--alt="logo"-->
           <!--/>-->
-          <h4>Min color-picker</h4>
+          <!--<h4>Min color-picker</h4>-->
         </div>
       </header>
-      <hr />
 
       <div class="no-color cant-container">
         <!--[><img class="cant-icon" src="./assets/icons/pantone.svg" /><img /><span<]-->
