--- a/Popup.html
+++ b/Popup.html
@@ -17,33 +17,14 @@
   <body>
     <div id="mainCont">
       <header>
-        <div>
-          <!--<img-->
-          <!--src="./assets/icons/color-picker-outline.svg"-->
-          <!--alt="logo"-->
-          <!--/>-->
-          <!--<h4>Min color-picker</h4>-->
-        </div>
+        <div></div>
       </header>
 
-      <div class="no-color cant-container">
-        <!--[><img class="cant-icon" src="./assets/icons/pantone.svg" /><img /><span<]-->
-          <!--[>style="font-family: lobster, sans-serif"<]-->
-          <!--[>>Use the color picker tool to select a pixel on the page. Or select a<]-->
-          <!--[>color from the lists below.</span<]-->
-        <!--[>><]-->
-      </div>
+      <div class="no-color cant-container"></div>
 
-      <div class="cant-container no-priv">
-        <!--[><img class="cant-icon" src="./assets/icons/no-way.svg" /><img /><span<]-->
-          <!--[>style="font-family: lobster, sans-serif"<]-->
-          <!--[>>Min color-picker doesn’t work on privileged pages</span<]-->
-        <!--[>><]-->
-      </div>
+      <div class="cant-container no-priv"></div>
 
-      <ul id="result">
-        <!--<li id="add-button">+</li>-->
-      </ul>
+      <ul id="result"></ul>
       <div id="picker_btn_cont"></div>
       <div class="info-container">
         <p>Hex code is copied to clipboard!</p>
