--- a/Popup.html
+++ b/Popup.html
@@ -10,7 +10,6 @@
     />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <meta name="author" content="Alan G. Alonso" />
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://cdnjs.cloudflare.com; script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' http://cdnjs.cloudflare.com ">
     <title>Min color-picker</title>
     <link rel="stylesheet" href="./popup.css" type="text/css" media="all" />
   </head>
@@ -26,7 +25,7 @@
       <div class="cant-container no-priv"></div>
 
       <ul id="result">
-        <button id="imagen">Imagen</button>
+        <!--<button id="capturePage">captura</button>-->
       </ul>
       <div id="picker_btn_cont"></div>
       <div class="info-container">
@@ -35,5 +34,5 @@
     </div>
   </body>
   <script src="popup.js"></script>
-  <script src="html2canvas.js"></script>
+  <!--<script src="capture.js"></script>-->
 </html>
